# SHMT

./: .gitmodules  CMakeLists.txt  Makefile  Makefile.env  README.md  configure.cfg  docker-compose.yml  libedgetpu_clean.so.1.0
block_pose3d/: Makefile  main.c  pose_ret_edgetpu_ice.txt  run_dataset.sh  tflite_pose3d.cpp  tflite_pose3d.h
block_pose3d/model/: toy_pose3d_full_model_edgetpu.tflite  toy_pose3d_full_model_float.tflite  toy_pose3d_sp_model_blk_16_edgetpu.tflite  toy_pose3d_sp_model_blk_16_float.tflite  toy_pose3d_sp_model_blk_32_edgetpu.tflite  toy_pose3d_sp_model_blk_32_float.tflite  toy_pose3d_sp_model_blk_64_edgetpu.tflite  toy_pose3d_sp_model_blk_64_float.tflite  toy_pose3d_sp_model_blk_8_edgetpu.tflite  toy_pose3d_sp_model_blk_8_float.tflite
common/: util_config.c  util_config.h  util_quality.c  util_quality.h  util_tflite.cpp  util_tflite.h  util_trt.cpp  util_trt.h
docker/: Dockerfile
docker/kernel_model_training/: Dockerfile
docker/partition_scheme/: Dockerfile
gl2age_gender/: main.c
gl2blazeface/: main.c
gl2blazepose/: main.c
gl2classification/: main.c  tflite_classification.cpp
gl2dbface/: main.c
gl2handpose/: main.c
gl2pose_estimation_3d/: main.c  tflite_pose3d.cpp  tflite_pose3d.h
include/: arrays.h  conversion.h  kernels.h  kernels_base.h  kernels_cpu.h  kernels_gpu.h  params.h  partition.h  shmt.h
log/: header.csv  record.csv
models/fft_2d_1024x1024/: fft_2d_edgetpu.tflite
models/fft_2d_2048x2048/: fft_2d_edgetpu.tflite
scripts/: AE_run.sh  docker_launch_container.sh  docker_launch_partition.sh  docker_launch_train.sh  docker_setup.sh  docker_setup_partition.sh  docker_setup_train.sh  install_gptpu_utils_on_aarch64.sh  nano_docker_unit_test.sh  run_Sobel_on_imagenet.sh  run_test_all.sh
src/: arrays.cpp  conversion.cpp  generate_kernel_model.py  kernels_cpu.cpp  kernels_gpu.cpp  main.cpp  params.cpp  partition.cpp  run_Sobel_on_dataset.py  train_Sobel.py  train_kernel_model.py  vops.cpp
src/kernels/: CMakeLists.txt  compile_shared_function.sh  function_blackscholes.cpp  function_dwt.cu  function_hotspot.cpp  function_srad.cpp  ground_truth_functions.py  hlop_gpu.cu  kernel_models.py  kernels_blackscholes.cpp  kernels_cpu.cpp  kernels_cpu.cu  kernels_dct8x8.cpp  kernels_dct8x8.cu  kernels_fft.cpp  kernels_fft.cu  kernels_fft.cuh  kernels_gpu.cu  kernels_hotspot.cu  kernels_kmeans.cpp  kernels_laplacian.cpp  kernels_sobel.cpp  kernels_srad.cu
src/kernels/convolutionFFT2D/: main.cpp
src/kernels/include/: hlop_gpu.h  hlop_tpu.h  kernels_base.h  kernels_cpu.h  kernels_fft.cuh  kernels_gpu.h  kernels_tpu.h  srad.h
test_simple/: main.c  pose_ret_edgetpu_ice.txt  tflite_pose3d.cpp  tflite_pose3d.h
trt_classification/: main.c
trt_pose_estimation_3d/: main.c
trt_test_simple/: main.c  trt_pose3d.cpp  trt_pose3d.h
utils/: CMakeLists.txt  performance.cpp  quality.cpp  utils.cpp
utils/include/: performance.h  quality.h  utils.h
(+54 files in other folders)
